Changes with version 1.2.3

 *) Add support for Python 3.13

 *) Update project boilerplate


Changes with version 1.2.2

 *) Add musllinux wheels

 *) Add support for Python 3.12

 *) Update project boilerplate


Changes with version 1.2.1

 *) Add support for Python 3.11

 *) Removed debug print from setup.py

 *) Update project boilerplate


Changes with version 1.2.0

 *) Improve regex detection. Fixes #17, #23

 *) Add aarch64 wheels (issue #24, #25, contributed by odidev)

 *) Add tests to source distribution (issue #20, contributed by dvzrv)

 *) bytearray input now produces bytearray output

 *) Update python support: 2.7, 3.6+

 *) Emit the correct env var name in the warning message if the compilation of
    the C implementation fails.


Changes with version 1.1.0

 *) Add support for unnested template literals (ECMA-6). Fixes #8. Kind of.

 *) Allow +, - and * in front of regexes. Fixes #13.

 *) The python version will only accept the C implementation if the versions
    match exactly. This should prevent using older installed C versions.
    Fixes #11. This issue is now more relevant since #7 is fixed.

 *) The C extension is now optional in the build process. You can make it
    required by setting the SETUP_CEXT_REQUIRED environment variable to 1.
    Fixes #7.

 *) Both python 2 and 3 now accept bytes and text as input. All other types now
    raise a TypeError. Before they possibly have been converted to a string,
    depending on the python version and the implementation.

 *) Support for PyPy and Jython is no longer tested. Patches are accepted,
    though.

 *) Minor adaptions for GCC 8

 *) Fix an inconsistency in the jsmin_for_posers function. It was not working
    properly with bang-comments enabled.

 *) Docs are no longer installed locally.

 *) Rework the setup and project management system. Add some real tests. Get rid
    of epydoc in favor of sphinx. Adapt to latest sphinx version.


Changes with version 1.0.12
