@@ -2,6 +2,7 @@
 *.so
 *.egg-info/
 __pycache__
+/setup.cfg
 /dist
 /build
 /wheel/dist
@@ -26,6 +27,7 @@ MANIFEST
 .coverage*
 /core
 gcov.out
+/bench/.out.*
 
 .terraform
 .state
