@@ -3,7 +3,7 @@ skipsdist = True
 skip_missing_interpreters = True
 envlist =
     prepare
-    {py27,py36,py37,py38,py39,py310,py311}
+    {py27,py36,py37,py38,py39,py310,py311,py312,py313}
     report
 
 [testenv]
