@@ -1,14 +1,0 @@
-[tool.black]
-skip-string-normalization = true
-# skip-magic-trailing-comma = true
-line-length = 78
-# target-version = ['py312']
-include='''
-(
-    tests/.*\.py
-|   tasks/.*\.py
-)$
-'''
-extend-exclude='''
-    tasks/_shell.py
-'''
