@@ -5,9 +5,14 @@ pip ~= 24.0.0; python_version == "3.7"
 pip ~= 21.3.1; python_version == "3.6"
 pip ~= 20.2.4; python_version == "2.7"
 
+setuptools == 75.3.0; python_version == "3.8"
 setuptools == 68.0.0; python_version == "3.7"
 setuptools == 59.6.0; python_version == "3.6"
 setuptools == 44.0.0; python_version == "2.7"
+
+build~=1.1.1; python_version =="3.7"
+build~=0.9.0; python_version =="3.6"
+build~=0.5.1; python_version =="2.7"
 
 twine == 4.0.2; python_version == "3.7"
 twine == 3.8.0; python_version == "3.6"
