@@ -2,16 +2,17 @@
 -r compat-requirements.txt
 
 # Packaging
-pip ~= 24.2.0; python_version >= "3.8"
-setuptools == 75.1.0; python_version >= "3.8"
-twine == 5.1.1; python_version >= "3.8"
+pip ~= 24.3.1; python_version >= "3.8"
+setuptools == 75.6.0; python_version >= "3.9"
+build ~= 1.2.2; python_version >="3.8"
+twine == 6.0.1; python_version >= "3.8"
 
 # Testing
-tox >= 4.5.1.1, <= 4.21.2; python_version >= "3.8"
+tox >= 4.5.1.1, <= 4.23.2; python_version >= "3.8"
 -r tests/requirements.txt
 
 # Checking
-pylint == 3.3.1; python_version >= "3.8"
+pylint == 3.3.2; python_version >= "3.8"
 astroid == 3.3.5; python_version >= "3.8"
 flake8 == 7.1.1; python_version >= "3.8"
 black ~= 24.10.0; python_version >= "3.9"
@@ -22,8 +23,9 @@ invoke ~= 2.2.0; python_version >= "3.6"
 # IPython
 ipython >= 7.20; python_version >= "3.7"
 
-Sphinx ~= 8.1.1; python_version >= "3.10"
-cloud_sptheme ~= 1.10.1
+Sphinx ~= 8.1.3; python_version >= "3.10"
+furo ~= 2024.8.6
+# cloud_sptheme ~= 1.10.1
 
 -e .
 
