@@ -1,12 +1,13 @@
 # Requirements file for tests
 -r coverage.txt
 
-pytest == 8.3.3; python_version >= "3.8"
+pytest == 8.3.4; python_version >= "3.8"
 pytest == 7.4.4; python_version == "3.7"
 pytest == 7.0.1; python_version == "3.6"
 pytest < 5.0.0; python_version == "2.7"
 
-pytest-cov == 5.0.0; python_version >= "3.8"
+pytest-cov == 6.0.0; python_version >= "3.9"
+pytest-cov == 5.0.0; python_version == "3.8"
 pytest-cov == 4.1.0; python_version == "3.7"
 pytest-cov == 4.0.0; python_version == "3.6"
 pytest-cov == 2.12.1; python_version == "2.7"
