@@ -1,3 +1,10 @@
+Changes with version
+
+ *) Update doc theme
+
+ *) Update project boilerplate
+
+
 Changes with version 1.2.3
 
  *) Add support for Python 3.13
